trunk/Archive2/66/cbfeaf3669fef5/output
main.cpp:28:5: error: class member cannot be redeclared
    INC_COUNT( uu );
    ^
main.cpp:15:46: note: expanded from macro 'INC_COUNT'
                static ::meta::Count<GET_COUNT(_tag_) + 2> _counter ## _tag_ (::meta::ICount<GET_COUNT(_tag_) + 2>)
                                                           ^
<scratch space>:149:1: note: expanded from here
_counteruu
^
main.cpp:26:2: note: previous declaration is here
        INC_COUNT( uu );
        ^
main.cpp:15:46: note: expanded from macro 'INC_COUNT'
                static ::meta::Count<GET_COUNT(_tag_) + 2> _counter ## _tag_ (::meta::ICount<GET_COUNT(_tag_) + 2>)
                                                           ^
<scratch space>:145:1: note: expanded from here
_counteruu
^
main.cpp:41:19: error: expected expression
    test<Test<5>>();
                  ^
main.cpp:41:20: error: expected a type
    test<Test<5>>();
                   ^
3 errors generated.
